kubernetes/apps/media/prowlarr/app/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr-web-ui
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`prowlarr.toskbot.xyz`)
      kind: Rule
      services:
        - name: prowlarr
          port: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr-external-dns
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: prowlarr.toskbot.xyz
